# subgraph-counting

./: CMakeLists.txt  LICENSE  README.md
config/: CMakeLists.txt  config.h
counting/: CMakeLists.txt  aggregation.cpp  aggregation.h  equation.cpp  equation.h  execution.cpp  execution.h  forest.cpp  forest.h  triangle.cpp  triangle.h
executable/: 5voc.cpp  CMakeLists.txt  batch.cpp  command.cpp  command.h  compare_homo.cpp  preprocess.cpp  scope.cpp
exp/data_graph/: web-spam.txt
exp/pattern_graph/4voc/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
exp/pattern_graph/5node/: 16.txt  18.txt  26.txt  29.txt  30.txt  31.txt  34.txt  43.txt  44.txt  46.txt  47.txt  49.txt  50.txt  54.txt  56.txt  59.txt  60.txt  62.txt  63.txt  64.txt  65.txt  66.txt  67.txt  70.txt  72.txt
exp/pattern_graph/5voc/: 15.txt  17.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  27.txt  28.txt  32.txt  33.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  45.txt  48.txt  51.txt  52.txt  53.txt  55.txt  57.txt  58.txt  61.txt  68.txt  69.txt  71.txt
exp/pattern_graph/6node/: 0.txt  1.txt  10.txt  101.txt  104.txt  105.txt  108.txt  110.txt  111.txt  115.txt  12.txt  121.txt  122.txt  128.txt  130.txt  133.txt  135.txt  143.txt  146.txt  15.txt  150.txt  151.txt  152.txt  153.txt  154.txt  155.txt  158.txt  159.txt  160.txt  161.txt  162.txt  163.txt  164.txt  166.txt  167.txt  168.txt  17.txt  171.txt  174.txt  175.txt  (+169 more)
exp/pattern_graph/6voc/: 100.txt  102.txt  103.txt  106.txt  107.txt  109.txt  11.txt  112.txt  113.txt  114.txt  116.txt  117.txt  118.txt  119.txt  120.txt  123.txt  124.txt  125.txt  126.txt  127.txt  129.txt  13.txt  131.txt  132.txt  134.txt  136.txt  137.txt  138.txt  139.txt  14.txt  140.txt  141.txt  142.txt  144.txt  145.txt  147.txt  148.txt  149.txt  156.txt  157.txt  (+158 more)
exp/pattern_graph/7node/: 0.txt  12.txt  14.txt  15.txt  17.txt  19.txt  2.txt  258.txt  336.txt  359.txt  38.txt  416.txt  50.txt  6.txt  8.txt  80.txt  94.txt
exp/pattern_graph/7voc/: 1.txt  10.txt  11.txt  13.txt  14.txt  16.txt  17.txt  18.txt  19.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
graph/: CMakeLists.txt  graph.cpp  graph.h
plan/: CMakeLists.txt  cost_estimator.cpp  cost_estimator.h  decompose.cpp  decompose.h  tree.cpp  tree.h
utility/: CMakeLists.txt  clique.cpp  clique.h  command_parser.cpp  command_parser.h  compute_set_intersection.cpp  compute_set_intersection.h  utils.cpp  utils.h
utility/automorphism/: config.guess  gentourng.c  makefile  nauty.h  planarity.c  traces.c  traces.h
